src/main/java/com/example/exception/validator/ValidationStringException.java
package com.example.exception.validator;

public class ValidationStringException extends RuntimeException {

    public ValidationStringException(String message) {
        super(message);
    }
}
